[workspace]

members = [
    "av_metrics",
    "av_metrics_tool",
    "av_metrics_decoders",
    "av_metrics_tests"
]

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1

[patch.crates-io]
av-metrics = { path = "av_metrics" }
av-metrics-decoders = { path = "av_metrics_decoders" }
