[package]
name = "av-metrics"
version = "0.5.1"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
edition = "2018"
description = "A collection of algorithms for measuring audio/video metrics"
license = "MIT"
repository = "https://github.com/rust-av/av-metrics"

[dependencies]
itertools = "0.9.0"
lab = "0.7.2"
libc = "0.2"
num-traits = "0.2"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1"
y4m = { version = "0.6", optional = true }
v_frame = { version = "0.1.0" }

[dev-dependencies]
criterion = "0.3"

[features]
default = ["y4m-decode"]
decode = []
y4m-decode = ["y4m", "decode"]
bench = []

[[bench]]
name = "bench"
harness = false
