[package]
name = "av-metrics"
version = "0.7.1"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
edition = "2018"
description = "A collection of algorithms for measuring audio/video metrics"
license = "MIT"
repository = "https://github.com/rust-av/av-metrics"
include = ["src/**/*"]

[dependencies]
crossbeam = "0.8"
itertools = "0.10.0"
lab = "0.11.0"
num-traits = "0.2"
rayon = "1.5"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1"
v_frame = { version = "0.2.0" }

[dev-dependencies]
criterion = "0.3"
y4m = "0.7.0"

[lib]
bench = false

[[bench]]
name = "bench"
harness = false
path = "benches/bench.rs"
