[package]
name = "av-metrics-decoders"
version = "0.1.0"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
edition = "2018"
description = "Decoders for use with av-metrics"
license = "MIT"
repository = "https://github.com/rust-av/av-metrics"
include = ["src/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
av-metrics = "0.6.1"
ffmpeg-next = { version = "4.4.0", optional = true, default-features = false, features = ["codec", "format"] }
y4m = { version = "0.7", optional = true }

[features]
ffmpeg = ["ffmpeg-next"]
