[package]
name = "av-metrics-decoders"
version = "0.2.0"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
edition = "2021"
description = "Decoders for use with av-metrics"
license = "MIT"
repository = "https://github.com/rust-av/av-metrics"
include = ["src/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
av-metrics = "0.9"
ffmpeg-next = { version = "5.0.3", optional = true, default-features = false, features = [
    "codec",
    "format",
] }
vapoursynth = { version = "0.4.0", features = [
    "vsscript-functions",
    "vapoursynth-functions",
    "vapoursynth-api-36",
    "vsscript-api-32",
], optional = true }
y4m = { version = "0.7", optional = true }

[features]
ffmpeg = ["ffmpeg-next"]
# Link a FFmpeg version built statically
ffmpeg_static = ["ffmpeg-next/static"]
# Build FFmpeg statically (https://github.com/zmwangx/rust-ffmpeg-sys/blob/master/Cargo.toml)
ffmpeg_build = ["ffmpeg-next/build", "ffmpeg-next/build-lib-dav1d"]
