[package]
name = "av-metrics-decoders"
version = "0.3.1"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
edition = "2021"
description = "Decoders for use with av-metrics"
license = "MIT"
repository = "https://github.com/rust-av/av-metrics"
include = ["src/**/*", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
av-metrics = "0.9"
ffmpeg-the-third = { version = "1.2.2", optional = true, default-features = false, features = [
    "codec",
    "format",
    "non-exhaustive-enums"
] }
vapoursynth = { version = "0.4.0", features = [
    "vsscript-functions",
    "vapoursynth-functions",
    "vapoursynth-api-36",
    "vsscript-api-32",
], optional = true }
y4m = { version = "0.8", optional = true }

[features]
ffmpeg = ["ffmpeg-the-third"]
# Link a FFmpeg version built statically
ffmpeg_static = ["ffmpeg-the-third/static"]
# Build FFmpeg statically (https://github.com/zmwangx/rust-ffmpeg-sys/blob/master/Cargo.toml)
ffmpeg_build = ["ffmpeg-the-third/build", "ffmpeg-the-third/build-lib-dav1d"]
