[package]
name = "av-metrics-gui-tool"
version = "0.1.0"
authors = ["Luni-4 <luni-4@hotmail.it>"]
edition = "2021"
description = "A GUI tool for measuring audio/video metrics"
license = "MIT"
repository = "https://github.com/rust-av/av-metrics"
include = ["src/**/*"]

[dependencies]
av-metrics = { version = "0.8", features = ["serde"] }
av-metrics-decoders = "0.1.2"

iced = "0.3.0"

async-trait = "0.1"
indexmap = "1.6.2"
rfd = "0.4.4"
serde = "1"
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }

[features]
default = ["y4m"]
y4m = ["av-metrics-decoders/y4m"]
ffmpeg = ["av-metrics-decoders/ffmpeg"]
ffmpeg_static = ["av-metrics-decoders/ffmpeg_build"]
