[package]
name = "av-metrics-tool"
version = "0.7.0"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
edition = "2018"
description = "A CLI tool for measuring audio/video metrics"
license = "MIT"
repository = "https://github.com/rust-av/av-metrics"
include = ["src/**/*"]

[dependencies]
av-metrics = { version = "0.6", features = ["serde"] }
av-metrics-decoders = "0.1"
clap = "2.33"
console = "0.14.0"
indicatif = "0.16.0"
serde = "1"
serde_json = "1"

[features]
default = ["y4m"]
y4m = ["av-metrics-decoders/y4m"]
ffmpeg = ["av-metrics-decoders/ffmpeg"]
