[package]
name = "av-metrics-tool"
version = "0.9.0"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
edition = "2021"
description = "A CLI tool for measuring audio/video metrics"
license = "MIT"
repository = "https://github.com/rust-av/av-metrics"
include = ["src/**/*"]

[dependencies]
av-metrics = { version = "0.9", features = ["serde"] }
av-metrics-decoders = "0.2.1"
clap = "3.1"
console = "0.15.0"
indicatif = "0.17.1"
serde = "1"
serde_json = "1"

[features]
default = ["y4m"]
y4m = ["av-metrics-decoders/y4m"]
ffmpeg = ["av-metrics-decoders/ffmpeg"]
